@@ -2,6 +2,7 @@ Release Note
 
 * 9/8/2014
   * fixed file lookup for container
+  * introduced trn_unknown
 
 * 9/7/2014
   * removing duplicated panda.um
